force-app/main/default/objects/Travel_Request__c/Travel_Request__c.object-meta.xml
<CustomObject>
    <description>The Travel Request object tracks employee travel requests through approval. It captures trip dates, destination city, business purpose, and trip type. Total Estimated and Actual Costs roll up from expense line items. Requests over $5,000 require CFO approval. Commonly used for travel expense management and approval workflows.</description>
    <label>Travel Request</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Travel Request Name</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>