force-app/main/default/objects/Travel_Request__c/fields/Business_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Business_Purpose__c</fullName>
    <description>Free-text field describing the business justification for this travel request.</description>
    <inlineHelpText>Describe the business reason for this trip (e.g., client meeting, conference attendance, training).</inlineHelpText>
    <label>Business Purpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>