force-app/main/default/objects/Travel_Request__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The department associated with this travel request. Used for cost allocation and departmental reporting.</description>
    <inlineHelpText>Select the department that will be charged for this trip.</inlineHelpText>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Travel Requests</relationshipLabel>
    <relationshipName>Travel_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>