force-app/main/default/objects/Travel_Request__c/fields/Destination_City__c.field-meta.xml
<CustomField>
    <fullName>Destination_City__c</fullName>
    <description>The primary city or location being traveled to for this trip.</description>
    <inlineHelpText>Enter the city and state/country of your primary travel destination (e.g., Chicago, IL or London, UK).</inlineHelpText>
    <label>Destination City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>