force-app/main/default/objects/Travel_Request__c/fields/Total_Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Cost__c</fullName>
    <description>Sum of all line item actual costs after the trip is completed. Used to compare actual spending against the original estimated budget.</description>
    <inlineHelpText>Automatically calculated as the sum of all expense line item actual costs. Populated after the trip is completed.</inlineHelpText>
    <label>Total Actual Cost</label>
    <summarizedField>Travel_Request_Line_Item__c.Actual_Cost__c</summarizedField>
    <summaryForeignKey>Travel_Request_Line_Item__c.Travel_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>