force-app/main/default/objects/Travel_Request__c/fields/Total_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Cost__c</fullName>
    <description>Sum of all line item estimated costs. Used to determine if the request exceeds the $5,000 threshold requiring CFO approval.</description>
    <inlineHelpText>Automatically calculated as the sum of all expense line item estimated costs. Triggers CFO approval when over $5,000.</inlineHelpText>
    <label>Total Estimated Cost</label>
    <summarizedField>Travel_Request_Line_Item__c.Estimated_Cost__c</summarizedField>
    <summaryForeignKey>Travel_Request_Line_Item__c.Travel_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>