force-app/main/default/objects/Travel_Request__c/fields/Trip_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Trip_End_Date__c</fullName>
    <description>The last day of travel for this trip request. Must not be before the Trip Start Date.</description>
    <inlineHelpText>Enter the date your travel ends (return date). Must be on or after the Trip Start Date.</inlineHelpText>
    <label>Trip End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>