force-app/main/default/objects/Travel_Request__c/fields/Trip_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Trip_Start_Date__c</fullName>
    <description>The first day of travel for this trip request.</description>
    <inlineHelpText>Enter the date your travel begins (departure date).</inlineHelpText>
    <label>Trip Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>