force-app/main/default/objects/Travel_Request__c/fields/Trip_Type__c.field-meta.xml
<CustomField>
    <fullName>Trip_Type__c</fullName>
    <description>Indicates whether this trip is domestic (within the country) or international (outside the country).</description>
    <inlineHelpText>Select Domestic for travel within the country, or International for travel abroad.</inlineHelpText>
    <label>Trip Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
                <default>true</default>
                <label>Domestic</label>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>